# ms3dm-data-toolkit

./: .env.sample  .gitignore  CATALOG_METADATA_PROTECTION.md  CHECK_CONFIGURATIONS_GUIDE.md  CLAUDE.md  DAGU_INTEGRATION_GUIDE.md  DAGU_LOGS_CLEANUP.md  DAGU_QUICK_START.md  DATA_CATALOG_GUIDE.md  DATA_CATALOG_IMPLEMENTATION.md  DATA_DICTIONARY_FEATURE.md  DATA_DICTIONARY_GUIDE.md  DATEKEY_FEATURE_COMPLETE.md  DATEKEY_VALIDATION_GUIDE.md  ERD_FEATURE.md  INDEX_FEATURES.md  METADATA_PROTECTION_UPDATE.md  Makefile  PIPELINE_BUILDER_GUIDE.md  PIPELINE_MANAGEMENT_FEATURE.md  PIPELINE_REFRESH_GUIDE.md  QUALITY_BUILDER_API.md  QUALITY_BUILDER_DESIGN.md  QUALITY_BUILDER_IMPLEMENTATION.md  QUALITY_BUILDER_QUICKSTART.md  QUALITY_BUILDER_SUMMARY.md  README.md  SCHEDULER_FRONTEND_INTEGRATION.md  SCROLLING_FIX.md  SETUP_MACOS.md  STARTUP_CLEANUP_CHECK.md  STORAGE_CLEANUP_SETUP.md  STORAGE_MANAGEMENT.md  TABLE_DROPDOWN_FEATURE.md  TABLE_SCHEMA_FEATURE.md  WINDOWS_AUTH_GUIDE.md  build.ps1  build.sh  dagu-entrypoint.sh  docker-compose.yml
backend/: Dockerfile  Dockerfile.test  Makefile  README.md  app.py  fix_pyodbc.sh  ms3dm_toolkit.spec  ms3dm_workbench.spec  pyproject.toml  requirements.txt
backend/api/: __init__.py  catalog.py  config.py  dbt.py  docs.py  expectations.py  flows.py  local_etl.py  quality.py  scheduler.py  setup.py  storage.py
backend/services/: app_config.py  db_connector.py  dbt_manager.py  duckdb_query.py  expectation_engine.py  flow_analyzer.py  metadata_store.py  quality_checker.py  sql_parser.py
backend/tests/: conftest.py  test_app_config.py  test_db_connector.py  test_local_etl_helpers.py  test_setup_validation.py  test_value_coercion.py
config/: connections.yaml
(+127 files in other folders)
